--- a/src/2.1 This.md
+++ b/src/2.1 This.md
@@ -8,14 +8,17 @@
 function say() {
     console.log(this.name + ' say ' + this.voice + '.');
 }
+
 var cat = {
     name: 'kitty',
     voice: 'meow'
 };
+
 var dog = {
     name: 'snoppy',
     voice: 'bark'
 };
+
 say.call(cat); // "kitty say meow."
 say.call(dog); // "snoppy say bark."
 ```
@@ -24,8 +27,122 @@ say.call(dog); // "snoppy say bark."
 
 ## 规则
 
-首先要清楚`this`本身：
+首先要清楚`this`本身：是一个当前作用域下的变量，不是代表当前的函数。
 
-1. `this`不是代表当前的函数。
-2. `this`是一个当前作用域下的变量。
-3. `this`的值仅与函数的执行方式有关。
+`this`的值仅与函数的调用方式有关：
+
+#### 1. 普通调用
+
+`this`是默认值`window`。
+
+```javascript
+var foo = 'global';
+
+function bar(){
+    console.log(this.foo);
+}
+
+bar(); // "global"
+```
+
+**注意**： 如果你使用严格模式的话，由于严格模式下LHS失败不会绑定到全局，所以`this`值是`undefined`。
+**注意**： 如果把函数作为实参，会进行普通调用，比如`setTimeout、forEach`。
+
+#### 2. 方法调用
+
+`this`是调用它的对象。
+
+```javascript
+var foo = 'global';
+
+function bar(){
+    console.log(this.foo);
+}
+
+var baz = {
+    foo: 'baz',
+    bar: bar
+};
+
+baz.bar(); // "baz"
+```
+
+**注意**： `a.b.c()`这种调用方式，`c`中的`this`值是离它最近的对象`b`。
+**注意**： 隐式丢失：如果你把对象的方法复制给一个对象，再直接调用它会指向`window`（普通调用`this`是默认值）。
+
+#### 3. `call/apply`调用
+
+`this`是`call/apply`传入的第一个参数。
+
+```javascript
+var foo = 'global';
+
+function bar(){
+    console.log(this.foo);
+}
+
+var baz = {
+    foo: 'baz',
+};
+
+bar.call(baz); // "baz"
+```
+
+**注意**： `Function.prototype.bind`也可以指定`this`值。
+**注意**： 如果想不指定`this`可以传入`null`值。
+
+#### 4. `new`构造函数调用
+
+`this`是构造函数生成的实例。
+
+太简单，就不举栗了😏
+
+
+#### 优先级
+
+上面4中调用方式同时符合多种时，会根据优先级进行判定。（`new`和`call/apply`无法一起调用）
+
+优先级从高到低分别为: `new` | `call/apply`调用、方法调用、普通调用。
+
+所以，一般判断`this`的流程：
+
+1. 是否`new`调用。是：生成的实例。
+2. 是否`call/apply`调用。是：指定的对象。
+3. 是否方法调用。是：调用该方法的对象。
+4. 否则就是`window`。
+
+## 总结
+
+- `this`的值只跟函数的调用方式有关。
+
+    + 普通调用：`window`
+    + 方法调用：调用它的对象
+    + `call/apply`：传入的第一个参数
+    + `new`：生成的实例
+
+### 小测验
+
+```javascript
+var a = 1;
+
+function foo(){
+    console.log(this.a);
+}
+
+var baz = foo.bind(null);
+
+
+var bar = {
+    a: 2,
+    foo: baz
+};
+
+
+foo();
+bar.foo();
+foo.call(bar);
+baz();
+new foo();
+```
+
+1. 上面程序分别输出什么？
